Refreshed Stream: Fix default cards too tall

--- a/client/blocks/reader-post-actions/style.scss
+++ b/client/blocks/reader-post-actions/style.scss
@@ -45,10 +45,3 @@
 		margin-right: 0;
 	}
 }
-
-.reader-post-actions .reader-post-options-menu .button {
-
-	&.is-borderless .gridicon {
-		top: -2px;
-	}
-}
